<resources>
    <string name="app_name">Encyklopedia samolotów</string>
    <string name="buttonPlanes">Samoloty</string>
    <string name="buttonHelicopters">Helikoptery</string>
    <string name="button1WW">I Wojna Światowa</string>
    <string name="button2WW">II Wojna Światowa</string>
    <string name="button70s">Lata Siedemdziesiąte</string>
    <string name="buttonNow">Współczesność</string>
    <string name="buttonShowModel">Pokaż model w rozszerzonej rzeczywistości</string>
    <string name="help">Instrukcja</string>
    <string name="tap">Poruszaj telefonem, aż wykryje płaską powierzchnię. Gdy zobaczysz białe kropki dotknij ich, aby w tym miejscu pojawił się model.</string>
    <string name="move">Dotknij ekranu jednym palcem i przeciągnij, aby przesunąć model.</string>
    <string name="zoom_out">Zsuń dwa palce, aby zmniejszyć model.</string>
    <string name="zoom_in">Rozsuń dwa palce, aby powiększyć model.</string>
    <string name="rotate">Obróć dwa palce, aby obrócić model.</string>

    <string name="f22">Lockheed F-22 Raptor</string>
    <string name="spad13">SPAD S.XIII</string>
    <string name="b787">Boeing 787 Dreamliner</string>
    <string name="cc2">Campini Caproni CC.2</string>
    <string name="an24">Antonov An-24</string>
    <string name="b29">Boeing B-29 Superfortress</string>
    <string name="wz10">Changze WZ-10</string>
    <string name="uh1">Bell UH-1 Iroquois</string>
    <string name="mi24">Mi-24</string>
    <string name="md500">McDonnell Douglas MD-500</string>
    <string name="ah64">Boeing AH-64 Apache</string>
    <string name="taube">Taube</string>
    <string name="aeg_g4">AEG G.IV</string>
    <string name="bristolf2b">Bristol F.2 Fighter</string>
    <string name="capronica5">Caproni Ca.5</string>
    <string name="fe2b">Royal Aircraft Factory F.E.2</string>
    <string name="fokkerDr1">Fokker Dr.I</string>
    <string name="gothag1">Gotha G.I</string>
    <string name="rolandcii">LFG Roland C.II</string>
    <string name="sopwith3">Sopwith Three-seater</string>
    <string name="spadxvi">SPAD S.XI</string>
    <string name="supermarineSpitfire">Supermarine Spitfire</string>
    <string name="b17bomber">Boeing B-17 Flying Fortress</string>
    <string name="ho229">Horten Ho 229</string>
    <string name="a10thunderbolt">Fairchild A-10 Thunderbolt II</string>
    <string name="mig15_gear">MiG-15</string>
    <string name="antonov225">Antonov An-225 Mrija</string>
    <string name="cargoAircraft">Lockheed C-130 Hercules</string>
    <string name="concorde">Concorde</string>
    <string name="gulfstream">Gulfstream G550</string>
    <string name="jakisMysliwiec">F-16 Fighting Falcon</string>
</resources>
