<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlanesActivity">

    <Button
        android:id="@+id/buttonSopwith"
        android:layout_width="189dp"
        android:layout_height="57dp"
        android:onClick="sopwithClicked"
        android:text="Sopwith"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonSpitfire"
        app:layout_constraintTop_toBottomOf="@+id/buttonSpad11" />

    <Button
        android:id="@+id/buttonSpad11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:onClick="spad11Clicked"
        android:text="Spad XI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonSpitfire"
        app:layout_constraintTop_toBottomOf="@+id/buttonTest" />

    <Button
        android:id="@+id/buttonSpitfire"
        android:layout_width="158dp"
        android:layout_height="54dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:onClick="spitfireClicked"
        android:text="Supermarine Spitfire"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTaube" />

    <Button
        android:id="@+id/buttonTaube"
        android:layout_width="154dp"
        android:layout_height="49dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:onClick="taubeClicked"
        android:text="Taube"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTest" />

    <Button
        android:id="@+id/buttonB787"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:text="@string/b787"
        android:onClick="b787Clicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/buttonCC2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:onClick="cc2Clicked"
        android:text="@string/cc2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonB787" />

    <Button
        android:id="@+id/buttonAn24"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:onClick="an24Clicked"
        android:text="@string/an24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCC2" />

    <Button
        android:id="@+id/buttonF22"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:onClick="f22Clicked"
        android:text="@string/f22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAn24" />

    <Button
        android:id="@+id/buttonSpad13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:onClick="spad13Clicked"
        android:text="@string/spad13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonF22" />

    <Button
        android:id="@+id/buttonTest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:onClick="testClicked"
        android:text="test"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSpad13" />
</androidx.constraintlayout.widget.ConstraintLayout>